...
            onNextMonth = { displayedMonth = displayedMonth.plusMonths(1) }
        )

        Spacer(modifier = Modifier.height(32.dp))

        Text(
            text = "Your stars:",
            fontSize = 22.sp,
            fontWeight = FontWeight.Bold,
            color = Color.Black
        )

        Spacer(modifier = Modifier.height(16.dp))
...
